--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/sentry": "^5.1.0",
+    "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.15.1",
     "nuxt-edge": "latest",
     "nuxt-i18n": "^6.27.2",
